Add fonts and site data

--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Monuments Map</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
-    <p>Hello World!</p>
+    <div class="grid">
+        <div class="title">
+            <h1>hidden in plain sight</h1>
+            <h2>Mapping Rhode Island's Colonial Memory</h2>
+        </div>
+        <section class="map_A" id="map_A"></section>
+        <section class="monument_A"></section>
+        <section class="research_A">
+            <h3>20</h3>
+            <h3>Article Title</h3>
+            <p>The TINY font family was originally created over the summer of 2018 as the visual identity for an experimental retail pop-up shop in Chinatown, New York City called “Today in New York”, or TINY for short.</p>
+        </section>
+
+
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js" type="text/javascript"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/mappa-mundi/dist/mappa.min.js" type="text/javascript"></script> -->
     <script src="https://unpkg.com/mappa-mundi@0.0.5/dist/mappa.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
